--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
    
 </head>
 <body>
+    
     <!-- CABEÇA -->
+
     <header class="header">
        <nav>
         <div class="logo">
@@ -103,15 +105,24 @@
 
     <section class="hidden">
         <main class="content" class="pag2">
-            <div class="boxes">
+            <div class="boxe1">
+                <div class="image-boxe">
+                    <img src="Imagens/Component 1.png" alt="">
+                </div>
                 <h2>Ajuda com Hardware</h2>
 
             </div>
-            <div class="boxes">
+            <div class="boxe2">
+                <div class="image-boxe">
+                    <img src="Imagens/Component 3.png" alt="">
+                </div>
                 <h2>Ajuda com Software </h2>
 
             </div>
-            <div class="boxe-special">
+            <div class="boxe3">
+                <div class="image-boxe">
+                    <img src="Imagens/Component 4.png" alt="">
+                </div>
                 <h2>Atualizações Precisas</h2>
 
             </div>
@@ -130,6 +141,7 @@
 
 
 <!-- PAGINA3 -->
+
 <section class="hidden" class="pag3">
        
         <div class="container3">
