--- a/index.html
+++ b/index.html
@@ -105,23 +105,23 @@
 
     <section class="hidden">
         <main class="content" class="pag2">
-            <div class="boxe1">
-                <div class="image-boxe">
-                    <img src="Imagens/Component 1.png" alt="">
+            <div class="box1">
+                <div class="image-box1">
+                    <img src="Imagens/Page2/Component 1.png" alt="">
                 </div>
                 <h2>Ajuda com Hardware</h2>
 
             </div>
-            <div class="boxe2">
-                <div class="image-boxe">
-                    <img src="Imagens/Component 3.png" alt="">
+            <div class="box2">
+                <div class="image-box">
+                    <img src="Imagens/Page2/Component 3.png" alt="">
                 </div>
                 <h2>Ajuda com Software </h2>
 
             </div>
-            <div class="boxe3">
-                <div class="image-boxe">
-                    <img src="Imagens/Component 4.png" alt="">
+            <div class="box3">
+                <div class="image-box">
+                    <img src="Imagens/Page2/Component 4.png" alt="">
                 </div>
                 <h2>Atualizações Precisas</h2>
 
