--- a/index.html
+++ b/index.html
@@ -105,30 +105,27 @@
 
     <section class="hidden">
         <main class="content" class="pag2">
-            <div class="box1">
-                <div class="image-box1">
+            <div id="box1" class="box1"  onclick="displayimage(1)">
                     <img src="Imagens/Page2/Component 1.png" alt="">
-                </div>
+                    
                 <h2>Ajuda com Hardware</h2>
 
             </div>
-            <div class="box2">
-                <div class="image-box">
+            <div id="box2" class="box2" onclick="displayimage(2)">
                     <img src="Imagens/Page2/Component 3.png" alt="">
-                </div>
+
                 <h2>Ajuda com Software </h2>
 
             </div>
-            <div class="box3">
-                <div class="image-box">
+            <div id="box3" class="box3" onclick="displayimage(3)">
                     <img src="Imagens/Page2/Component 4.png" alt="">
-                </div>
+
                 <h2>Atualizações Precisas</h2>
 
             </div>
     </section>
     <section class="hidden">
-        <div class="box">
+        <div id="box-display" class="box">
 
         </div>
         <div class="bnt-page2">
