--- a/index.html
+++ b/index.html
@@ -168,9 +168,9 @@
             <!-- Área de exibição do conteúdo -->
             <div id="displayArea3" >
                 
-                <video id="videoPlayer"  class="display-area3"  controls>
+                <video id="videoPlayer"  class="display-area3" >
                     
-                    <source id="videoSource" src="https://raw.githubusercontent.com/Patuzito/Guardian_projeto/main/Videos/video1.mp4" type="video/mp4">
+                    <source id="videoSource" src="https://raw.githubusercontent.com/Patuzito/Guardian_projeto/main/Videos/video1.mp4"  type="video/mp4">
                     Seu navegador não suporta o vídeo.
                 </video>
             </div>
