--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
             <!-- Área de exibição do conteúdo -->
             <div id="displayArea3" >
                 
-                <video id="videoPlayer"  class="display-area3" >
+                <video id="videoPlayer"  class="display-area3" autoplay muted loop>
                     
                     <source id="videoSource" src="https://raw.githubusercontent.com/Patuzito/Guardian_projeto/main/Videos/video1.mp4"  type="video/mp4">
                     Seu navegador não suporta o vídeo.
