--- a/index.html
+++ b/index.html
@@ -193,6 +193,22 @@
 
         </section>
 
+        <!-- Pagina de perguntas frequentes -->
+
+        <section class="hidden">
+            <main class="content pag4">
+                <h1>Perguntas Frequentes</h1>
+
+                <h3>O que é o Guardian?</h3>
+                <h3></h3>
+                <h3></h3>
+                <h3></h3>
+                <h3></h3>
+                <h3></h3>
+            </main>
+
+        </section>
+
         <!-- PAGINAFINAL -->
         <section class="hidden">
             <main class="conteudoF">
@@ -215,7 +231,7 @@
                 <a href="#">Termos e Condições</a>
                 <a href="#">Privacidade</a>
                 <a href="#">Cookies</a>
-                
+
             <p>Copyright © 2024 Guardian. Todos os direitos reservados</p>
             <div class="footer-social">
                 <a href="https://www.instagram.com/guardian_offycial/" target="_blank"><svg width="31" height="31"
