--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
                         aumentar a durabilidade dos dispositivos,
                         seja para usuários domésticos ou empresas.
                     </p>
-                    <img id="content-logo" class="logob" src="Images/Guardian nome branco.png" alt="logo">
+                    <img id="content-logo" class="logob" src="https://github.com/Patuzito/Guardian_projeto/blob/main/Imagens/Pag4/Guardian%20nome%20branco.png" alt="logo">
                 </div>
                 <img id="content-image" class="molier" src="Images/molier ilustrate.png" alt="imagem ilustrativa">
             </div>
