--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                     </p>
                     <img id="content-logo" class="logob" src="https://github.com/Patuzito/Guardian_projeto/blob/main/Imagens/Pag4/Guardian%20nome%20branco.png" alt="logo">
                 </div>
-                <img id="content-image" class="molier" src="Images/molier ilustrate.png" alt="imagem ilustrativa">
+                <img id="content-image" class="molier" src="https://github.com/Patuzito/Guardian_projeto/blob/main/Imagens/Pag4/molier%20ilustrate.png" alt="imagem ilustrativa">
             </div>
         </div>
     </section>
