--- a/index.html
+++ b/index.html
@@ -103,9 +103,9 @@
                         aumentar a durabilidade dos dispositivos,
                         seja para usuários domésticos ou empresas.
                     </p>
-                    <img id="content-logo" class="logob" src="https://github.com/Patuzito/Guardian_projeto/blob/main/Imagens/Pag4/Guardian%20nome%20branco.png" alt="logo">
+                    <img id="content-logo" class="logob" src="https://github.com/Patuzito/Guardian_projeto/blob/main/Imagens/Pag4/Guardian%20nome%20branco.png?raw=true" alt="logo">
                 </div>
-                <img id="content-image" class="molier" src="https://github.com/Patuzito/Guardian_projeto/blob/main/Imagens/Pag4/molier%20ilustrate.png" alt="imagem ilustrativa">
+                <img id="content-image" class="molier" src="https://github.com/Patuzito/Guardian_projeto/blob/main/Imagens/Pag4/molier%20ilustrate.png?raw=true" alt="imagem ilustrativa">
             </div>
         </div>
     </section>
