--- a/index.html
+++ b/index.html
@@ -133,19 +133,19 @@
                     <span class="button-number3"><img class="imgpag3"
                             src="https://github.com/Patuzito/Guardian_projeto/blob/main/Imagens/pag3/1.png?raw=true"
                             alt=""></span>
-                    <h2>Descreva o problema</h2>
+                    <h2>Descreva o problema</h2> <img src="https://github.com/Patuzito/Guardian_projeto/blob/main/Imagens/pag3/Component%202.png?raw=true" alt="" class="Icons">
                 </div>
                 <div class="button3" onclick="displayText(2)">
                     <span class="button-number3"><img class="imgpag3"
                             src="https://github.com/Patuzito/Guardian_projeto/blob/main/Imagens/pag3/2%20(1).png?raw=true"
                             alt=""></span>
-                    <h2>Resolveremos o problema</h2>
+                    <h2>Resolveremos o problema</h2> <img src="https://github.com/Patuzito/Guardian_projeto/blob/main/Imagens/pag3/Component%202%20(1).png?raw=true" alt="" class="Icons">
                 </div>
                 <div class="button3" onclick="displayText(3)">
                     <span class="button-number3"><img class="imgpag3"
                             src="https://github.com/Patuzito/Guardian_projeto/blob/main/Imagens/pag3/3.png?raw=true"
                             alt=""></span>
-                    <h2>Aguardar o resultado</h2>
+                    <h2>Aguardar o resultado</h2> <img class="Icons" src="https://github.com/Patuzito/Guardian_projeto/blob/main/Imagens/pag3/Component%201.png?raw=true" alt="">
                 </div>
             </div>
         </div>
