--- a/Firebase/public/index.html
+++ b/Firebase/public/index.html
@@ -121,7 +121,7 @@
             <div id="displayArea3">
                 <video id="videoPlayer" class="display-area3">
                     <source id="videoSource"
-                        src="https://raw.githubusercontent.com/Patuzito/Guardian_projeto/main/Videos/video1.mp4"
+                        src=""
                         type="video/mp4">
                     Seu navegador não suporta o vídeo.
                 </video>
