--- a/Firebase/public/index.html
+++ b/Firebase/public/index.html
@@ -103,9 +103,13 @@
                         aumentar a durabilidade dos dispositivos,
                         seja para usuários domésticos ou empresas.
                     </p>
-                    <img id="content-logo" class="logob" src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/Pag4/Guardian%20nome%20branco.png?raw=true" alt="logo">
+                    <img id="content-logo" class="logob"
+                        src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/Pag4/Guardian%20nome%20branco.png?raw=true"
+                        alt="logo">
                 </div>
-                <img id="content-image" class="molier" src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/Pag4/molier%20ilustrate.png?raw=true" alt="imagem ilustrativa">
+                <img id="content-image" class="molier"
+                    src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/Pag4/molier%20ilustrate.png?raw=true"
+                    alt="imagem ilustrativa">
             </div>
         </div>
     </section>
@@ -133,19 +137,25 @@
                     <span class="button-number3"><img class="imgpag3"
                             src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/pag3/1.png?raw=true"
                             alt=""></span>
-                    <h2>Descreva o problema</h2><img src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/pag3/Component%201%20(1).png?raw=true" alt="" class="Icons">
+                    <h2>Descreva o problema</h2><img
+                        src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/pag3/Component%201%20(1).png?raw=true"
+                        alt="" class="Icons">
                 </div>
                 <div class="button3" onclick="displayText(2)">
                     <span class="button-number3"><img class="imgpag3"
                             src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/pag3/2%20(1).png?raw=true"
                             alt=""></span>
-                    <h2>Resolveremos o problema</h2><img src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/pag3/Componente2.png?raw=true" alt=""    class="Icons">
+                    <h2>Resolveremos o problema</h2><img
+                        src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/pag3/Componente2.png?raw=true"
+                        alt="" class="Icons">
                 </div>
                 <div class="button3" onclick="displayText(3)">
                     <span class="button-number3"><img class="imgpag3"
                             src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/pag3/3.png?raw=true"
                             alt=""></span>
-                    <h2>Aguardar o resultado</h2> <img src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/pag3/Component3.png?raw=true" alt="" class="Icons">
+                    <h2>Aguardar o resultado</h2> <img
+                        src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/pag3/Component3.png?raw=true"
+                        alt="" class="Icons">
                 </div>
             </div>
         </div>
