--- a/Firebase/public/index.html
+++ b/Firebase/public/index.html
@@ -19,7 +19,7 @@
     <title>Guardian</title>
     <link rel="stylesheet" href="Guardian.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="shortcut icon" href="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/Icone.png?raw=true" type="image/x-icon">
+    <link rel="shortcut icon" href="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/Icone.png?raw=true" type="image/m8-icon" sizes="32x32">
 </head>
 
 <body>
@@ -150,25 +150,19 @@
                     <span class="button-number3"><img class="imgpag3"
                             src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/pag3/1.png?raw=true"
                             alt=""></span>
-                    <h2>Descreva o problema</h2><img
-                        src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/pag3/Component%201%20(1).png?raw=true"
-                        alt="" class="Icons">
+                    <h2>Descreva o problema</h2><i class="fa-regular fa-comment fa-5x Icons"></i>
                 </div>
                 <div class="button3" onclick="displayText(2)">
                     <span class="button-number3"><img class="imgpag3"
                             src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/pag3/2%20(1).png?raw=true"
                             alt=""></span>
-                    <h2>Resolveremos o problema</h2><img
-                        src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/pag3/Componente2.png?raw=true"
-                        alt="" class="Icons">
+                    <h2>Veremos o problema</h2><i class="fa-regular fa-lightbulb fa-5x Icons"></i>
                 </div>
                 <div class="button3" onclick="displayText(3)">
                     <span class="button-number3"><img class="imgpag3"
                             src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/pag3/3.png?raw=true"
                             alt=""></span>
-                    <h2>Aguardar o resultado</h2> <img
-                        src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/pag3/Component3.png?raw=true"
-                        alt="" class="Icons">
+                    <h2>Aguardar o resultado</h2> <i class="fa-regular fa-clock fa-4x Icons"></i>
                 </div>
             </div>
         </div>
