--- a/Firebase/public/index.html
+++ b/Firebase/public/index.html
@@ -91,18 +91,15 @@
     <section class="content hidden">
         <!-- Blocos de serviços -->
         <div class="box1 Button" id="B1" onclick="showContent('1')">
-            <img src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/Page2/Component%201.png?raw=true"
-                alt="Ajuda Hardware">
+            <i class="fa-solid fa-keyboard fa-4x Iconspag2"></i>
             <h2>Ajuda com Hardware</h2>
         </div>
         <div class="box1 Button" id="B2" onclick="showContent('2')">
-            <img src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/Page2/Component%203.png?raw=true"
-                alt="Ajuda Software">
+            <i class="fa-solid fa-cloud fa-4x Iconspag2"></i>
             <h2>Ajuda com Software</h2>
         </div>
         <div class="box1 Button" id="B3" onclick="showContent('3')">
-            <img src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/Page2/Component%204.png?raw=true"
-                alt="Atualizações Precisas">
+            <i class="fa-solid fa-microchip fa-4x Iconspag2"></i>
             <h2>Atualizações Precisas</h2>
         </div>
     </section>
@@ -156,13 +153,13 @@
                     <span class="button-number3"><img class="imgpag3"
                             src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/pag3/2%20(1).png?raw=true"
                             alt=""></span>
-                    <h2>Veremos o problema</h2><i class="fa-regular fa-lightbulb fa-5x Icons"></i>
+                    <h2>analisamos o problema</h2><i class="fa-regular fa-lightbulb fa-5x Icons"></i>
                 </div>
                 <div class="button3" onclick="displayText(3)">
                     <span class="button-number3"><img class="imgpag3"
                             src="https://github.com/Patuzito/Guardian_projeto/blob/main/Firebase/public/Imagens/pag3/3.png?raw=true"
                             alt=""></span>
-                    <h2>Aguardar o resultado</h2> <i class="fa-regular fa-clock fa-4x Icons"></i>
+                    <h2>Observe o resultado</h2> <i class="fa-regular fa-circle-check fa-5x Icons"></i>
                 </div>
             </div>
         </div>
