--- a/Firebase/public/index.html
+++ b/Firebase/public/index.html
@@ -280,37 +280,37 @@
                 <div class="carousel-wrapper">
                     <div class="carousel">
                         <div class="comment">
-                            <img src="user1.jpg" alt="Usuário 1" class="profile-pic">
-                            <h3 class="username">Erick Hiroshi</h3>
+                            <i class="fa-solid fa-user-tie profile-pic fa-4x"></i>                          
+                              <h3 class="username">Erick Hiroshi</h3>
                             <h5 class="username">Desenvolvedor Roblox</h5>
                             <p class="comment-text">"Adorei este produto, super recomendo!"</p>
                         </div>
                         <div class="comment">
-                            <img src="user2.jpg" alt="Usuário 2" class="profile-pic">
+                            <i class="fa-solid fa-user-tie profile-pic fa-4x"></i>    
                             <h3 class="username">João Vitor</h3>
                             <h5 class="username">Techleader & Pscicólogo</h5>
                             <p class="comment-text">“Tive problemas com a conexãode Wi-Fi, isso estava gerando problemas com o meu trabalho, reportei à Guardian e resolveram a minha situação.”</p>
                         </div>
                         <div class="comment">
-                            <img src="user3.jpg" alt="Usuário 3" class="profile-pic">
+                            <i class="fa-solid fa-user-tie profile-pic fa-4x"></i>    
                             <h3 class="username">Brenno Oliveira</h3>
                             <h5 class="username">Desenvolvedor Full Stack</h5>
                             <p class="comment-text">“Meu sistema operacional não inicializava e apresentava comportamentos estranhos, apresentei para a Guardian e eles conseguram resolver o meu problema.” </p>
                         </div>
                         <div class="comment">
-                            <img src="user4.jpg" alt="Usuário 4" class="profile-pic">
+                            <i class="fa-solid fa-user-tie profile-pic fa-4x"></i>    
                             <h3 class="username">Mateus Henrique</h3>
                             <h5 class="username">Designer Gráfico UI UX </h5>
                             <p class="comment-text">“A minha situação era o HD do meu Computador, delatei a Guardian e conseguiram resolver meu problema com maestria.” </p>
                         </div>
                         <div class="comment">
-                            <img src="user5.jpg" alt="Usuário 5" class="profile-pic">
+                            <i class="fa-solid fa-user-tie profile-pic fa-4x"></i>    
                             <h3 class="username">Luis Victor</h3>
                             <h5 class="username">Padeiro profissional</h5>
                             <p class="comment-text">"Produto chegou no prazo, muito satisfeito."</p>
                         </div>
                         <div class="comment">
-                            <img src="user6.jpg" alt="Usuário 6" class="profile-pic">
+                            <i class="fa-solid fa-user-tie profile-pic fa-4x"></i>    
                             <h3 class="username">Henrique Gomes</h3>
                             <h5 class="username">Farmaceutico Hospitalar</h5>
                             <p class="comment-text">"Qualidade excelente e preço justo. Me ajudou muito!!"</p>
